<resources>
    <string name="app_name">Purr</string>

    <string name="permission_title">Woah there!</string>
    <string name="permission_message">We need a special permission to continue. Use ADB to run the following command:</string>
    <string name="permission_command">adb shell pm grant com.draco.purr android.permission.WRITE_SECURE_SETTINGS</string>

    <string name="learn_more">Learn more</string>

    <string name="resolution_title">Resolution</string>
    <string name="resolution_message">Scale your display here to give your poor GPU a break.</string>

    <string name="verify_title">Neat!</string>
    <string name="verify_message">Let\'s see if this resolution is compatible with your display. Tick all of the boxes in the corners of the screen to continue.</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="back">Go back!</string>
    <string name="apply">Apply</string>
    <string name="copied">Copied to clipboard</string>
    <string name="please_wait">Waiting for permission</string>
    <string name="check_all_boxes">Check all boxes to proceed</string>

    <string name="sample_image">Sample image</string>

    <string name="snackbar_intent_failed">Could not handle this action</string>
    <string name="snackbar_api_error">Unsupported API call</string>

    <string name="learn_more_url">https://www.xda-developers.com/install-adb-windows-macos-linux/</string>
    <string name="developer_url">https://www.github.com/tytydraco</string>
    <string name="source_url">https://www.github.com/tytydraco/Purr</string>
    <string name="contact_url">mailto:tylernij@gmail.com</string>
    <string name="sample_url">https://unsplash.com/photos/IuJc2qh2TcA</string>

    <string name="pref_reset_resolution_title">Reset display</string>
    <string name="pref_reset_resolution_summary">Restore the original display resolution and density</string>
    <string name="pref_reset_resolution_key">reset_resolution</string>

    <string name="pref_custom_resolution_title">Custom resolution</string>
    <string name="pref_custom_resolution_summary">Specify a custom display resolution</string>
    <string name="pref_custom_resolution_key">custom_resolution</string>

    <string name="pref_saved_title">Saved resolutions</string>
    <string name="pref_saved_summary">Pick your favorite resolutions</string>
    <string name="pref_saved_key">saved</string>

    <string name="pref_verify_title">Verify resolutions</string>
    <string name="pref_verify_summary">Show a verification screen when switching resolutions</string>
    <string name="pref_verify_key">verify</string>

    <string name="pref_developer_title">Developer</string>
    <string name="pref_developer_summary">Tyler Nijmeh</string>
    <string name="pref_developer_key">developer</string>

    <string name="pref_source_title">Source code</string>
    <string name="pref_source_summary">Check out this project on GitHub</string>
    <string name="pref_source_key">source</string>

    <string name="pref_contact_title">Contact</string>
    <string name="pref_contact_summary">Email me with questions, comments, and concerns</string>
    <string name="pref_contact_key">contact</string>

    <string name="pref_sample_title">Sample image credits</string>
    <string name="pref_sample_summary">Photo taken by Cédric VT uploaded to Unsplash</string>
    <string name="pref_sample_key">sample</string>

    <string name="pref_licenses_title">Licenses</string>
    <string name="pref_licenses_summary">View the open source licenses</string>
    <string name="pref_licenses_key">licenses</string>
</resources>