<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">
        <Preference
            android:title="@string/pref_reset_resolution_title"
            android:summary="@string/pref_reset_resolution_summary"
            android:key="@string/pref_reset_resolution_key"
            android:icon="@drawable/ic_baseline_clear_24" />
        <Preference
            android:title="@string/pref_custom_resolution_title"
            android:summary="@string/pref_custom_resolution_summary"
            android:key="@string/pref_custom_resolution_key"
            android:icon="@drawable/ic_baseline_edit_24" />
        <SwitchPreference
            android:title="@string/pref_verify_title"
            android:summary="@string/pref_verify_summary"
            android:key="@string/pref_verify_key"
            android:icon="@drawable/ic_baseline_verified_24"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:title="@string/pref_developer_title"
            android:summary="@string/pref_developer_summary"
            android:key="@string/pref_developer_key"
            android:icon="@drawable/ic_baseline_person_pin_24" />
        <Preference
            android:title="@string/pref_source_title"
            android:summary="@string/pref_source_summary"
            android:key="@string/pref_source_key"
            android:icon="@drawable/ic_baseline_code_24" />
        <Preference
            android:title="@string/pref_contact_title"
            android:summary="@string/pref_contact_summary"
            android:key="@string/pref_contact_key"
            android:icon="@drawable/ic_baseline_email_24" />
        <Preference
            android:title="@string/pref_licenses_title"
            android:summary="@string/pref_licenses_summary"
            android:key="@string/pref_licenses_key"
            android:icon="@drawable/ic_baseline_insert_drive_file_24" />
    </PreferenceCategory>
</PreferenceScreen>