<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_baseline_settings_24"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:id="@+id/text_body">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:text="@string/resolution_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/resolution_message" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sample_image"
        android:layout_marginHorizontal="24dp"
        android:layout_above="@id/res_slider"
        android:layout_below="@id/text_body"
        android:scaleType="centerCrop"
        android:contentDescription="@string/sample_image"
        android:src="@drawable/sample" />
    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/res_slider"
        android:layout_marginHorizontal="12dp"
        android:layout_alignParentBottom="true"
        android:valueFrom="25"
        android:valueTo="100"
        android:stepSize="5"
        android:value="100" />
</RelativeLayout>