<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:text="@string/resolution_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="32dp"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/resolution_message" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/sample_image"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/sample_image"
        android:src="@drawable/sample" />
    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/res_slider"
        android:valueFrom="25"
        android:valueTo="100"
        android:stepSize="5"
        android:value="100" />
</LinearLayout>