<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:padding="24dp"
        android:layout_centerInParent="true"
        android:text="@string/back" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_1"
        style="@style/CheckBox.NoMargin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_2"
        style="@style/CheckBox.NoMargin"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_3"
        style="@style/CheckBox.NoMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_4"
        style="@style/CheckBox.NoMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:text="@string/verify_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/verify_message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/check_all_boxes" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:max="10000"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/progress" />
    </LinearLayout>
</RelativeLayout>